--- a/omni3wdbot_description/config/omni3wdbot_controllers.yaml
+++ b/omni3wdbot_description/config/omni3wdbot_controllers.yaml
@@ -5,17 +5,15 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-    omnibot_base_controller:
-      type: omni_4wd_controller/Omni4WDController
+    omni3wdbot_base_controller:
+      type: omni_3wd_controller/Omni3WDController
 
-omnibot_base_controller:
+omni3wdbot_base_controller:
   ros__parameters:
-    front_right_wheel_name: "front_right_wheel_motor_shaft_joint"
-    front_left_wheel_name: "front_left_wheel_motor_shaft_joint"
+    front_wheel_name: "front_wheel_motor_shaft_joint"
     rear_right_wheel_name: "rear_right_wheel_motor_shaft_joint"
     rear_left_wheel_name: "rear_left_wheel_motor_shaft_joint"
-    wheel_width_separation: 0.12
-    wheel_height_separation: 0.12
+    wheel_separation_from_robot_center: 0.10
     wheel_radius: 0.025
     wheel_separation_multiplier: 1.0
     left_wheel_radius_multiplier: 1.0
@@ -29,7 +27,6 @@ omnibot_base_controller:
 
     open_loop: false
     position_feedback: true
-    position_feedback_slip_xy_coefficient: 0.75
     enable_odom_tf: false
 
     cmd_vel_timeout: 0.5
