--- a/omni3wdbot_description/package.xml
+++ b/omni3wdbot_description/package.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>omnibot_gazebosim</name>
+  <name>omni3wdbot_description</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="yukimakura86@gmail.com">yukimakura</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>gazebo_ros2_control</depend>
-  <depend>robot_localization</depend>
-  <depend>navigation2</depend>
-  <depend>nav2_bringup</depend>
-  <depend>joy_linux</depend>
-
-  <exec_depend>cartographer_ros</exec_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
-
+  <depend>urdf</depend>
+  <depend>xacro</depend>
+  <depend>gazebo_ros</depend>
+  <depend>gazebo_ros_pkgs</depend>
+  <depend>joint_state_publisher</depend>
+  <depend>robot_state_publisher</depend>
+  <depend>ros2_control</depend>
+  <depend>ros2_controllers</depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
