--- a/omni3wdbot_gazebosim/CMakeLists.txt
+++ b/omni3wdbot_gazebosim/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(omnibot_gazebosim)
+project(omni3wdbot_gazebosim)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -9,13 +9,9 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
-find_package(tf2_geometry_msgs REQUIRED)
 
 add_executable(cmdvel_translator src/cmdvel_translator.cpp)
 ament_target_dependencies(cmdvel_translator rclcpp geometry_msgs)
-add_executable(imu_quat_normalizer src/imu_quat_normalizer.cpp)
-ament_target_dependencies(imu_quat_normalizer rclcpp sensor_msgs tf2_geometry_msgs)
 
 install(
   DIRECTORY
@@ -26,7 +22,6 @@ install(
 
 install(TARGETS
   cmdvel_translator
-  imu_quat_normalizer
   DESTINATION lib/${PROJECT_NAME}
 )
 
