--- a/omni3wdbot_gazebosim/package.xml
+++ b/omni3wdbot_gazebosim/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>omnibot_gazebosim</name>
+  <name>omni3wdbot_gazebosim</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="yukimakura86@gmail.com">yukimakura</maintainer>
@@ -12,9 +12,6 @@
   <depend>robot_localization</depend>
   <depend>navigation2</depend>
   <depend>nav2_bringup</depend>
-  <depend>joy_linux</depend>
-
-  <exec_depend>cartographer_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
