--- a/omni3wdbot_hardware_interface/package.xml
+++ b/omni3wdbot_hardware_interface/package.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>omni3wdbot_gazebosim</name>
+  <name>omni3wdbot_hardware_interface</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="yukimakura86@gmail.com">yukimakura</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>gazebo_ros2_control</depend>
-  <depend>robot_localization</depend>
-  <depend>navigation2</depend>
-  <depend>nav2_bringup</depend>
-  <depend>rviz2</depend>
+
+  <depend>hardware_interface</depend>
+  <depend>pluginlib</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
