--- a/omni3wdbot_hardware_interface/test/config/test_quadomni_drive_controller.yaml
+++ b/omni3wdbot_hardware_interface/test/config/test_quadomni_drive_controller.yaml
@@ -1,23 +1,12 @@
-controller_manager:
+test_omni_3wd_controller:
   ros__parameters:
-    update_rate: 10  # Hz
-
-    joint_state_broadcaster:
-      type: joint_state_broadcaster/JointStateBroadcaster
-
-    omni3wdbot_base_controller:
-      type: omni_3wd_controller/Omni3WDController
-
-omni3wdbot_base_controller:
-  ros__parameters:
-    front_wheel_name: "front_wheel_motor_shaft_joint"
+    front_right_wheel_name: "front_right_wheel_motor_shaft_joint"
+    front_left_wheel_name: "front_left_wheel_motor_shaft_joint"
     rear_right_wheel_name: "rear_right_wheel_motor_shaft_joint"
     rear_left_wheel_name: "rear_left_wheel_motor_shaft_joint"
-    wheel_separation_from_robot_center: 0.10
-    wheel_radius: 0.035
-    wheel_separation_multiplier: 1.0
-    left_wheel_radius_multiplier: 1.0
-    right_wheel_radius_multiplier: 1.0
+    wheel_width_separation: 0.10
+    wheel_height_separation: 0.10
+    wheel_radius: 0.025
     tf_frame_prefix_enable: true
     tf_frame_prefix: ""
     odom_frame_id: "odom"
@@ -27,7 +16,7 @@ omni3wdbot_base_controller:
 
     open_loop: false
     position_feedback: true
-    enable_odom_tf: false
+    enable_odom_tf: true
 
     cmd_vel_timeout: 0.5
     #publish_limited_velocity: true
